@@ -1,8 +1,14 @@
-# $Id: Makefile.am,v 1.14 2006-02-18 04:32:11 thep Exp $
+# $Id: Makefile.am,v 1.15 2006-05-04 10:14:27 thep Exp $
 SUBDIRS = thctype thstr thcell thinp thrend thcoll thbrk thwchar thwctype \
 	thwstr thwbrk
 
 MAINTAINERCLEANFILES = Makefile.in
+
+if OS_WIN32
+no_undefined = -no-undefined
+else
+no_undefined =
+endif
 
 lib_LTLIBRARIES = libthai.la
 
@@ -19,6 +25,6 @@ libthai_la_LIBADD = \
 	$(top_builddir)/src/thwctype/libthwctype.la \
 	$(top_builddir)/src/thwstr/libthwstr.la \
 	$(top_builddir)/src/thwbrk/libthwbrk.la 
-libthai_la_LDFLAGS = \
+libthai_la_LDFLAGS = $(no_undefined) \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 
